--- a/physique spé/Equations de Maxwell et energie electromagnetique/cours.tex
+++ b/physique spé/Equations de Maxwell et energie electromagnetique/cours.tex
@@ -29,4 +29,23 @@
     $$\vec{B_2} - \vec{B_1} = \mu_0 \vec{j_s} \wedge \vec{n_{1\to 2}}$$
 \end{theoreme}
 
+\begin{definition}{}{densité volumique d'énergie électromagnétique}
+    La \notion{densité volumique d'énergie électromagnétique} vaut~:
+    \begin{align*}
+        u_\mr{em} &= u_\mr{e} + u_\mr{m}\\
+        &= \frac{1}{2}\varepsilon_0 E^2 + \frac{1}{2\mu_0}B^2
+    \end{align*}
+    Un volume mésoscopique $\d{\tau}$ contient alors l'énergie d'origine électromagnétique~:
+    $$\d{U_\mr{em}} = u_\mr{em} \d{\tau}$$
+\end{definition}
+
+\begin{definition}{}{vecteur de Poynting}
+    La puissance électromagnétique rayonnée au travers d'une surface $\mc{S}$ est égale au flux du \notion{vecteur de Poynting} au travers de cette surface~:
+    $$\mc{P}_\mr{rayonnée} = \iint_\mc{S} \vec{\Pi} \cdot \vec{\d{S}}$$
+\end{definition}
+
+\begin{proposition}{}{formule du vecteur de Poynting}
+    Le vecteur de Poynting est relié aux champs par~:
+    $$\vec{\Pi}(M,t) = \frac{\vec{E}(M,t) \wedge \vec{B}(M,t)}{\mu_0}$$ 
+\end{proposition}
 \end{document}
