--- a/stock/en-tete_v5.tex
+++ b/stock/en-tete_v5.tex
@@ -10,7 +10,7 @@
 \usepackage{multicol}
 \usepackage{stmaryrd}
 \usepackage{graphicx}
-\graphicspath{ {./images/} }
+\graphicspath{ {images/} }
 \usepackage[framemethod=tikz]{mdframed}
 \usepackage{tikz,pgfplots}
 \pgfplotsset{compat=1.18}
@@ -77,7 +77,7 @@
     innertopmargin=5pt,
     innerbottommargin=5pt,
     skipabove=-0.5cm,
-    skipbelow=-0.25cm,
+    skipbelow=-0cm,
 ]{boite_definition}
 
 \newcounter{boite}
@@ -121,7 +121,7 @@
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=-0.5cm,
-  skipbelow=-0.25cm,
+  skipbelow=-0cm,
 ]{boite_exemple}
 
 
@@ -164,7 +164,7 @@
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=-0.5cm,
-  skipbelow=-0.25cm,
+  skipbelow=-0cm,
 ]{boite_proposition}
 
 \newenvironment{proposition}[2]
@@ -206,7 +206,7 @@
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=-0.5cm,
-  skipbelow=-0.25cm,
+  skipbelow=-0cm,
 ]{boite_theoreme}
 
 
@@ -250,7 +250,7 @@
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=-0.5cm,
-  skipbelow=-0.25cm,
+  skipbelow=-0cm,
 ]{boite_demonstration}
 
 
@@ -280,7 +280,7 @@
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=-0.5cm,
-  skipbelow=-0.25cm,
+  skipbelow=-0cm,
 ]{boite_remarque}
 
 
@@ -323,7 +323,7 @@
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=-0.5cm,
-  skipbelow=-0.25cm,
+  skipbelow=-0cm,
 ]{boite_implementation}
 
 
@@ -493,7 +493,7 @@
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=-0.5cm,
-  skipbelow=-0.25cm,
+  skipbelow=-0cm,
 ]{boite_question}
 
 
@@ -536,7 +536,7 @@
   innertopmargin=5pt,
   innerbottommargin=5pt,
   skipabove=-0.5cm,
-  skipbelow=-0.25cm,
+  skipbelow=-0cm,
 ]{boite_corollaire}
 
 
