--- a/maths spé/C19/cours.tex
+++ b/maths spé/C19/cours.tex
@@ -36,6 +36,10 @@
     $$D_uf(a) = \d{f}_a(u)$$
 \end{theoreme}
 
+\begin{theoreme}{19.18}{composition d'applications différentiables}
+    
+\end{theoreme}
+
 
 
 \end{document}
