--- a/français/cours sur le résumé/exemple_résumé.tex
+++ b/français/cours sur le résumé/exemple_résumé.tex
@@ -1,7 +1,7 @@
 \input{../../stock/en-tete_v5.tex}
 
-\title{\Large Étude d'un texte \\ \Huge titre}
-\date{2025/03/14}
+\title{\Large Étude d'un texte \\ \Huge Michel Deneken}
+\date{14 mars 2025}
 \begin{document}
 \input{../../stock/commands.tex}
 \maketitle
@@ -20,6 +20,10 @@ Pas plus de 4 paragraphes~:
     \item III - plus long
     \item IV - conclusion, plus court que II et III
 \end{enumeratebf}
+
+\begin{remarque}{FONDAMENTALE}{forme}
+    Il est possible de présenter un "//" tous les 50 mots, aux deux concours. Toujours indiquer le nombre de mots à la fin.
+\end{remarque}
 
 \begin{remarque}{1}{concernant cette structure}
     On conserve la présence d'une introduction et d'une conclusion.
